yaml/broker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-service
  namespace: team-burnham
spec:
  selector:
    matchLabels:
      app: broker-service
  template:
    metadata:
      labels:
        app: broker-service
    spec:
      containers:
      - name: broker-service
        image: "966339691353.dkr.ecr.us-west-2.amazonaws.com/eks-capstone-broker-service:1.01"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: broker-service
  namespace: team-burnham
spec:
  selector:
    app: broker-service
  ports:
    - protocol: TCP 
      name: main-port
      port: 8080
      targetPort: 8080
