yaml/front-end.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  namespace: team-burnham
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
      - name: front-end
        image: "966339691353.dkr.ecr.us-west-2.amazonaws.com/eks-capstone-front-end:1.01"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8081

---

apiVersion: v1
kind: Service
metadata:
  name: front-end
  namespace: team-burnham
spec:
  selector:
    app: front-end
  ports:
    - protocol: TCP
      name: main-port
      port: 8081
      targetPort: 8081
