yaml/mail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailer-service
  namespace: team-burnham
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailer-service
  template:
    metadata:
      labels:
        app: mailer-service
    spec:
      containers:
      - name: mailer-service
        image: "966339691353.dkr.ecr.us-west-2.amazonaws.com/eks-capstone-mail-service:1.01"
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: mailer-service
  namespace: team-burnham
spec:
  selector:
    app: mailer-service
  ports:
    - protocol: TCP
      name: main-port
      port: 80
      targetPort: 80
