yaml/mailhog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog
  namespace: team-burnham
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  template:
    metadata:
      labels:
        app: mailhog
    spec:
      containers:
      - name: mailhog
        image: "mailhog/mailhog:latest"
        ports:
        - containerPort: 1025
        - containerPort: 8025
        resources:
          limits: 
            memory: "128Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
  namespace: team-burnham
spec:
  selector:
    app: mailhog
  ports:
    - protocol: TCP 
      name: smtp-port 
      port: 1025
      targetPort: 1025
    - protocol: TCP
      name: web-port
      port: 8025
      targetPort: 8025
