yaml/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: team-burnham
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: "mongo:4.2.17-bionic"
        ports:
        - containerPort: 27017
        resources:
          limits: 
            memory: "128Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: team-burnham
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP 
      name: main-port
      port: 27017
      targetPort: 27017
