yaml/rabbit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: team-burnham
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: "rabbitmq:3.9-alpine"
        ports:
        - containerPort: 5672
        resources:
          limits: 
            memory: "512Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: team-burnham
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP 
      name: smtp-port
      port: 5672
      targetPort: 5672
